--- a/index.html
+++ b/index.html
@@ -23,6 +23,54 @@
 </blockquote>
 <p>爸爸终于实现了带妈妈出去游玩的承诺</p>
 <p><img src="imgs/WechatIMG22.jpeg" width="50%" height="50%"></p>
+<h2 id="爸爸妈妈成为合法夫妻"><a href="20140823/index.html">爸爸妈妈成为合法夫妻</a></h2>
+<blockquote>
+<p>2014年08月</p>
+</blockquote>
+<p>今天你的爸爸妈妈成为了合同夫妻，你的到来就不远了！！！</p>
+<p><img src="imgs/WechatIMG23.jpeg" width="50%" height="50%"></p>
+<h2 id="爸爸妈妈结婚度假"><a href="20140824/index.html">爸爸妈妈结婚度假</a></h2>
+<blockquote>
+<p>2014年08月</p>
+</blockquote>
+<p>领证第二天爸爸妈妈就踏上的三亚的旅程</p>
+<p><img src="imgs/WechatIMG25.jpeg" width="50%" height="50%"></p>
+<h2 id="姥姥舅舅我们一起登长城"><a href="20141008/index.html">姥姥、舅舅我们一起登长城</a></h2>
+<blockquote>
+<p>2014年10月</p>
+</blockquote>
+<p>十一姥姥、舅舅来北京游玩</p>
+<p><img src="imgs/WechatIMG28.jpeg" width="50%" height="50%"></p>
+<h2 id="今天爸爸妈妈结婚办事"><a href="20150108/index.html">今天爸爸妈妈结婚办事</a></h2>
+<blockquote>
+<p>2015年1月</p>
+</blockquote>
+<p>今天爸爸妈妈结婚举行答谢宴</p>
+<p><img src="imgs/WechatIMG30.jpeg" width="50%" height="50%"></p>
+<h2 id="爸爸妈妈带着姥姥去舅舅那看草原"><a href="20150725/index.html">爸爸妈妈带着姥姥去舅舅那看草原</a></h2>
+<blockquote>
+<p>2015年07月</p>
+</blockquote>
+<p>爸爸妈妈带着姥姥去舅舅工作的地方呼和浩特那看草原</p>
+<p><img src="imgs/WechatIMG32.jpeg" width="50%" height="50%"></p>
+<h2 id="爸爸跟着妈妈公司去团建"><a href="20150822/index.html">爸爸跟着妈妈公司去团建</a></h2>
+<blockquote>
+<p>2015年08月</p>
+</blockquote>
+<p>爸爸跟着妈妈公司去团建</p>
+<p><img src="imgs/WechatIMG37.jpeg" width="50%" height="50%"></p>
+<h2 id="妈妈跟着爸爸出差游玩"><a href="20150829/index.html">妈妈跟着爸爸出差游玩</a></h2>
+<blockquote>
+<p>2015年08月</p>
+</blockquote>
+<p>妈妈跟着爸爸出差游玩</p>
+<p><img src="imgs/WechatIMG41.jpeg" width="50%" height="50%"></p>
+<h2 id="这一天爸爸妈妈终于等到了你"><a href="20151006/index.html">这一天爸爸妈妈终于等到了你</a></h2>
+<blockquote>
+<p>2015年10月</p>
+</blockquote>
+<p>这一天爸爸妈妈终于等到了你！！！！</p>
+<p><img src="imgs/WechatIMG45.jpeg" width="50%" height="50%"></p>
             </div>
     </div>
   </div>
