--- a/20160207/index.html
+++ b/20160207/index.html
@@ -15,7 +15,8 @@
     <div class="container">
     <div class="row">
             <div class="span12">
-            <h1 id="guojingran">guojingran</h1>
+            <h1 id="爸爸对这些奇怪玩意很喜欢">爸爸对这些奇怪玩意很喜欢</h1>
+<p><img src="../imgs/WechatIMG46.jpeg" width="50%" height="50%"> <img src="../imgs/WechatIMG47.jpeg" width="50%" height="50%"></p>
             </div>
     </div>
   </div>
