--- a/20160607/index.html
+++ b/20160607/index.html
@@ -15,7 +15,8 @@
     <div class="container">
     <div class="row">
             <div class="span12">
-            <h1 id="guojingran">guojingran</h1>
+            <h1 id="这是你来到这个世界上的第一天">这是你来到这个世界上的第一天</h1>
+<p><img src="../imgs/WechatIMG48.jpeg" width="50%" height="50%"></p>
             </div>
     </div>
   </div>
