--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <style type="text/css">code{white-space: pre;}</style>
 </head>
 <body>
-  <div class="container">
     <div class="container">
     <div class="row">
             <div class="span12">
@@ -71,9 +70,20 @@
 </blockquote>
 <p>这一天爸爸妈妈终于等到了你！！！！</p>
 <p><img src="imgs/WechatIMG45.jpeg" width="50%" height="50%"></p>
+<h2 id="爸爸对这些奇怪玩意很喜欢"><a href="20160207/index.html">爸爸对这些奇怪玩意很喜欢</a></h2>
+<blockquote>
+<p>2016年02月</p>
+</blockquote>
+<p>爸爸对这些奇怪玩意很喜欢</p>
+<p><img src="imgs/WechatIMG46.jpeg" width="50%" height="50%"></p>
+<h2 id="这是你来到这个世界上的第一天"><a href="20160607/index.html">这是你来到这个世界上的第一天</a></h2>
+<blockquote>
+<p>2016年06月</p>
+</blockquote>
+<p>这是你来到这个世界上的第一天</p>
+<p><img src="imgs/WechatIMG48.jpeg" width="50%" height="50%"></p>
             </div>
     </div>
-  </div>
   </div>
 </body>
 </html>
